[package]
name = "pam_bitwarden"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
env_logger = "0.11.5"
pamsm = { version = "0.5.5", features = ["libpam"] }
log = "0.4.20"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
